# douki

./: .makim.yaml  .pre-commit-config.yaml  .releaserc.json  404.html  CNAME  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: docs.yaml  main.yaml  release.yaml
api/: index.html
api/SUMMARY/: index.html
api/_base/: index.html
api/_base/config/: index.html
api/_base/defaults/: index.html
api/_base/discovery/: index.html
api/_base/language/: index.html
api/_base/sync/: index.html
api/_base/validation/: index.html
api/_python/: index.html
api/_python/config/: index.html
api/_python/defaults/: index.html
api/_python/extractor/: index.html
api/_python/language/: index.html
api/_python/migrate/: index.html
api/_python/sync/: index.html
api/cli/: index.html
api/core/: index.html
api/migrate/: index.html
api/sync/: index.html
changelog/: index.html
conda/: dev.yaml
contributing/: index.html
docs/: changelog.md  contributing.md  index.md  installation.md  usage.md
example/: example.ipynb  index.html
installation/: index.html
scripts/: gen_ref_nav.py
search/: search_index.json
src/douki/: __init__.py  _validation.py  cli.py  core.py  migrate.py  schema.json  sync.py
src/douki/_base/: __init__.py  config.py  defaults.py  discovery.py  language.py  schema.json  sync.py  validation.py
src/douki/_python/: __init__.py  config.py  defaults.py  extractor.py  language.py  migrate.py  sync.py
tests/: __init__.py  example.py  test_cli.py  test_main.py  test_migrate.py  test_sync.py  test_validation.py
tests/smoke/: clean_file.py  dirty_class.py  dirty_file.py  dummy.py  numpy_style.py
usage/: index.html
